tests/error/varloop_not_vararg.gw
#! varloop expression type must be
varloop 1 {

}
